--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Refresh Button -->
   <div class="button">
-    <button type="button" name="button" class="btn"><a href="file:///C:/Users/ASUS_PC/Desktop/dices/index.html">One more time!</a></button>
+    <button type="button" name="button" class="btn"><a href="https://fisherok3452.github.io/dices/">One more time!</a></button>
 
   </div>
 
